# open-wages

./: .gitignore  CLAUDE.md  Cargo.toml  LICENSE-APACHE  LICENSE-MIT  README.md  handoff.md
crates/ow-app/: Cargo.toml
crates/ow-app/src/: game_loop.rs  main.rs
crates/ow-audio/: Cargo.toml
crates/ow-audio/src/: lib.rs  music.rs  vla_parser.rs  wav_loader.rs
crates/ow-core/: Cargo.toml
crates/ow-core/src/: actions.rs  ai.rs  combat.rs  contract.rs  damage.rs  economy.rs  game_state.rs  hiring.rs  inventory.rs  lib.rs  los.rs  mission_setup.rs  pathfinding.rs  ruleset.rs  save.rs  weather.rs
crates/ow-data/: Cargo.toml
crates/ow-data/src/: ai_nodes.rs  animation.rs  buttons.rs  dat_parser.rs  equip.rs  lib.rs  map_loader.rs  mercs.rs  mission.rs  moves.rs  shop.rs  strings.rs  target.rs  textrect.rs  validator.rs  weapons.rs  wri.rs
crates/ow-render/: Cargo.toml
crates/ow-render/src/: anim_controller.rs  camera.rs  hud.rs  iso_math.rs  lib.rs  palette.rs  pcx.rs  sprite_renderer.rs  text.rs  tile_renderer.rs  ui.rs  unit_renderer.rs  viewer.rs
crates/ow-tools/: Cargo.toml
crates/ow-tools/src/: classify.rs  lib.rs  strings.rs  structs.rs
docs/: FORMAT_AI_NODES.md  FORMAT_BINARY_SURVEY.md  FORMAT_BTN.md  FORMAT_CONTRACTS.md  FORMAT_COR.md  FORMAT_EQUIP.md  FORMAT_MERCS.md  FORMAT_MSSN.md  FORMAT_TEXT.md  FORMAT_WEAPONS.md  PALETTE_ANALYSIS.md  PARSER_VERIFICATION.md  SPRITE_FORMAT_VERIFICATION.md  TILE_FORMAT_VERIFIED.md  architecture.md
skills/: game-dat-parser.skill  isometric-engine.skill  win95-binary-re.skill
