[workspace]
resolver = "2"
members = [
    "crates/ow-core",
    "crates/ow-data",
    "crates/ow-render",
    "crates/ow-audio",
    "crates/ow-app",
    "crates/ow-tools",
]

[workspace.package]
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"
repository = "https://github.com/suhteevah/open-wages"

[workspace.dependencies]
# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Error handling
anyhow = "1"
thiserror = "2"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Binary parsing
byteorder = "1"

# RNG
rand = "0.8"

# Pathfinding
pathfinding = "4"

# Rendering (SDL2)
sdl2 = { version = "0.37", features = ["image", "mixer", "ttf"] }

# CLI
clap = { version = "4", features = ["derive"] }

# File walking
walkdir = "2"
