[package]
name = "ow-core"
description = "Game state, combat, economy, AI for Open Wages"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
ow-data = { path = "../ow-data" }
serde = { workspace = true }
serde_json = { workspace = true }
anyhow = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
rand = { workspace = true }
pathfinding = { workspace = true }
