[package]
name = "ow-data"
description = "Original game file parsers for Open Wages"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
anyhow = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
byteorder = { workspace = true }

[dev-dependencies]
tempfile = "3"
